--- a/button1.html
+++ b/button1.html
@@ -7,13 +7,18 @@
 </head>
 <body>
     <!-- <h1>Some Cool Buttons</h1> -->
-    <div>
-        <!-- <p>Futuristic Button </p> -->
-        <a href="#">
-            <i></i><i></i>
-            <span>bang bang</span>
-        </a>
+    <div class="container">
+        <span>B</span>
+        <span>U</span>
+        <span>T</span>
+        <span>T</span>
+        <span>O</span>
+        <span>N</span>
     </div>
+    <a href="#">
+        <i></i><i></i>
+        <span>bang bang</span>
+    </a>
     <script>
         let btn = document.querySelector('a');
         btn.addEventListener('mousemove', e =>{
